# MTRX5700_assignment1

./: .gitignore  README.md
question_1/: forward.py
question_2/: README.md
question_2/.catkin_tools/profiles/default/: devel_collisions.txt
question_2/src/assignment_1_code_v2/: README.html  README.md
question_2/src/assignment_1_code_v2/assignment_1/: CMakeLists.txt  package.xml  setup.py
question_2/src/assignment_1_code_v2/assignment_1/launch/: solution.launch  ur5e_ass1.launch
question_2/src/assignment_1_code_v2/assignment_1/models/goal/: model.config  model.sdf
question_2/src/assignment_1_code_v2/assignment_1/models/pillar/: model.config  model.sdf
question_2/src/assignment_1_code_v2/assignment_1/scripts/: build_tower.py  create_stage.py  demo.py  gazebo_attach.py  gripper_control.py  gripper_demo.py  move_group_interface.py
question_2/src/assignment_1_code_v2/assignment_1/src/assignment_1/: robot_movement.py  scene.py  scene_object.py  utils.py
question_2/src/assignment_1_code_v2/assignment_1/world/: stage.sdf
question_2/src/assignment_1_code_v2/fmauch_universal_robot/ur5_e_moveit_config/config/: ur5e.srdf
question_2/src/assignment_1_code_v2/fmauch_universal_robot/ur5_e_moveit_config/launch/: ur5_e_moveit_planning_execution.launch
question_2/src/assignment_1_code_v2/fmauch_universal_robot/ur_e_description/meshes/ur5e/collision/: fingers.stl  gripper.stl
question_2/src/assignment_1_code_v2/fmauch_universal_robot/ur_e_description/meshes/ur5e/visual/: fingers.dae
question_2/src/assignment_1_code_v2/fmauch_universal_robot/ur_e_description/urdf/: ur5e.urdf.xacro
question_2/src/assignment_1_code_v2/gazebo_ros_link_attacher/: CMakeLists.txt
question_3/: workspace_plotter.py
